--- a/Gdock.config
+++ b/Gdock.config
@@ -1,23 +1,21 @@
-# 20200212 
+# 20200215
 
 CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac-128m=y
 CONFIG_TARGET_BOARD="ipq40xx"
 # CONFIG_PACKAGE_UnblockNeteaseMusic is not set
 # CONFIG_PACKAGE_adbyby is not set
-# CONFIG_PACKAGE_automount is not set
-# CONFIG_PACKAGE_autosamba is not set
 # CONFIG_PACKAGE_bash is not set
 # CONFIG_PACKAGE_boost is not set
 # CONFIG_PACKAGE_coreutils is not set
 # CONFIG_PACKAGE_etherwake is not set
+# CONFIG_PACKAGE_icu is not set
 # CONFIG_PACKAGE_ipset is not set
 # CONFIG_PACKAGE_iptables-mod-conntrack-extra is not set
 # CONFIG_PACKAGE_iptables-mod-ipopt is not set
 # CONFIG_PACKAGE_iptables-mod-ipsec is not set
 # CONFIG_PACKAGE_iptables-mod-tproxy is not set
 # CONFIG_PACKAGE_kmod-crypto-cbc is not set
-# CONFIG_PACKAGE_kmod-crypto-crc32c is not set
 # CONFIG_PACKAGE_kmod-crypto-deflate is not set
 # CONFIG_PACKAGE_kmod-crypto-des is not set
 # CONFIG_PACKAGE_kmod-crypto-echainiv is not set
@@ -26,10 +24,6 @@ CONFIG_TARGET_BOARD="ipq40xx"
 # CONFIG_PACKAGE_kmod-crypto-rng is not set
 # CONFIG_PACKAGE_kmod-crypto-sha256 is not set
 # CONFIG_PACKAGE_kmod-crypto-wq is not set
-# CONFIG_PACKAGE_kmod-fs-exfat is not set
-# CONFIG_PACKAGE_kmod-fs-ext4 is not set
-# CONFIG_PACKAGE_kmod-fs-vfat is not set
-# CONFIG_PACKAGE_kmod-fuse is not set
 # CONFIG_PACKAGE_kmod-gre is not set
 # CONFIG_PACKAGE_kmod-ifb is not set
 # CONFIG_PACKAGE_kmod-ip6tables is not set
@@ -39,19 +33,12 @@ CONFIG_TARGET_BOARD="ipq40xx"
 # CONFIG_PACKAGE_kmod-ipt-ipsec is not set
 # CONFIG_PACKAGE_kmod-ipt-tproxy is not set
 # CONFIG_PACKAGE_kmod-iptunnel6 is not set
-# CONFIG_PACKAGE_kmod-lib-crc16 is not set
 # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
 # CONFIG_PACKAGE_kmod-nf-ipt6 is not set
 # CONFIG_PACKAGE_kmod-nf-reject6 is not set
-# CONFIG_PACKAGE_kmod-nls-cp437 is not set
-# CONFIG_PACKAGE_kmod-nls-iso8859-1 is not set
-# CONFIG_PACKAGE_kmod-nls-utf8 is not set
 # CONFIG_PACKAGE_kmod-sched-cake is not set
 # CONFIG_PACKAGE_kmod-sched-core is not set
-# CONFIG_PACKAGE_kmod-scsi-core is not set
 # CONFIG_PACKAGE_kmod-tun is not set
-# CONFIG_PACKAGE_kmod-usb-storage is not set
-# CONFIG_PACKAGE_kmod-usb-storage-extras is not set
 # CONFIG_PACKAGE_libatomic is not set
 # CONFIG_PACKAGE_libbz2 is not set
 # CONFIG_PACKAGE_libdb47 is not set
@@ -72,6 +59,7 @@ CONFIG_TARGET_BOARD="ipq40xx"
 # CONFIG_PACKAGE_libstdcpp is not set
 # CONFIG_PACKAGE_libuv is not set
 # CONFIG_PACKAGE_libxml2 is not set
+# CONFIG_PACKAGE_libzstd is not set
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_luci-app-ddns is not set
@@ -80,13 +68,12 @@ CONFIG_TARGET_BOARD="ipq40xx"
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 # CONFIG_PACKAGE_luci-app-pptp-server is not set
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
-# CONFIG_PACKAGE_luci-app-samba is not set
 # CONFIG_PACKAGE_luci-app-sqm is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-upnp is not set
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
-# CONFIG_PACKAGE_luci-app-vsftpd is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
@@ -94,7 +81,6 @@ CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_PACKAGE_miniupnpd is not set
 # CONFIG_PACKAGE_nlbwmon is not set
 # CONFIG_PACKAGE_node is not set
-# CONFIG_PACKAGE_ntfs-3g is not set
 # CONFIG_PACKAGE_pdnsd-alt is not set
 # CONFIG_PACKAGE_pptpd is not set
 # CONFIG_PACKAGE_python is not set
@@ -121,9 +107,9 @@ CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_PACKAGE_qt5-network is not set
 # CONFIG_PACKAGE_qt5-xml is not set
 # CONFIG_PACKAGE_rblibtorrent is not set
-# CONFIG_PACKAGE_samba36-server is not set
 # CONFIG_PACKAGE_shadowsocksr-libev-alt is not set
 # CONFIG_PACKAGE_sqm-scripts is not set
+# CONFIG_PACKAGE_srelay is not set
 # CONFIG_PACKAGE_strongswan is not set
 # CONFIG_PACKAGE_strongswan-charon is not set
 # CONFIG_PACKAGE_strongswan-ipsec is not set
@@ -144,5 +130,4 @@ CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_PACKAGE_strongswan-mod-xcbc is not set
 # CONFIG_PACKAGE_tc is not set
 # CONFIG_PACKAGE_vlmcsd is not set
-# CONFIG_PACKAGE_vsftpd-alt is not set
 # CONFIG_PACKAGE_zerotier is not set
