--- a/.github/workflows/Gdock-router.yml
+++ b/.github/workflows/Gdock-router.yml
@@ -15,7 +15,7 @@ on:
     branches: 
       - master
     paths:
-      - 'Gdock.config'
+      - 'Gdock-router.config'
 #  schedule:
 #    - cron: 0 8 * * 5
 #   watch:
@@ -60,7 +60,7 @@ jobs:
 
     - name: Load custom configuration
       env:
-        CONFIG_FILE: 'Gdock.config'
+        CONFIG_FILE: 'Gdock-router.config'
         DIY_SH: 'diy.sh'
       run: |
         [ -e files ] && mv files openwrt/files
